--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,45 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:width="192dp"
+    android:height="192dp"
+    android:viewportWidth="192"
+    android:viewportHeight="192"
+
+
+    >
+
+    <group
+
+        android:scaleY="0.9"
+        android:scaleX="0.9
+"
+
+        android:translateY="80"
+        android:translateX="35"
+        >
+
+
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M19.16,31.94L8.6,18H5.92V31.94H0.15V0.04H5.92V13.15H7.53L19.58,0.04H26.9L13.31,14.85L26.31,31.94H19.16Z"
+        android:fillColor="#ff00ff"
+        />
+    <path
+        android:pathData="M39.5,32.4C37.16,32.4 35.14,31.89 33.42,30.86C31.71,29.83 30.38,28.4 29.44,26.55C28.5,24.7 28.03,22.54 28.03,20.07C28.03,17.6 28.5,15.43 29.44,13.57C30.38,11.72 31.71,10.27 33.42,9.24C35.14,8.22 37.16,7.7 39.5,7.7C41.83,7.7 43.86,8.22 45.57,9.24C47.28,10.27 48.61,11.72 49.54,13.57C50.49,15.43 50.96,17.6 50.96,20.07C50.96,22.54 50.49,24.7 49.54,26.55C48.61,28.4 47.28,29.83 45.57,30.86C43.86,31.89 41.83,32.4 39.5,32.4ZM39.53,27.89C40.79,27.89 41.85,27.54 42.71,26.84C43.56,26.14 44.19,25.19 44.61,24.01C45.03,22.83 45.24,21.51 45.24,20.05C45.24,18.59 45.03,17.27 44.61,16.08C44.19,14.89 43.56,13.94 42.71,13.23C41.85,12.53 40.79,12.17 39.53,12.17C38.23,12.17 37.15,12.53 36.29,13.23C35.44,13.94 34.8,14.89 34.37,16.08C33.96,17.27 33.75,18.59 33.75,20.05C33.75,21.51 33.96,22.83 34.37,24.01C34.8,25.19 35.44,26.14 36.29,26.84C37.15,27.54 38.23,27.89 39.53,27.89Z"
+        android:fillColor="#ffffff"
+        tools:ignore="VectorPath" />
+    <path
+        android:pathData="M53.63,38.88V27.29H55.53C56.04,26.9 56.46,26.37 56.8,25.69C57.15,25.01 57.43,24.2 57.64,23.28C57.87,22.34 58.06,21.3 58.21,20.15C58.35,18.98 58.48,17.73 58.59,16.39L59.28,8.01H76.57V27.29H80.27V38.88H74.82V31.94H59.17V38.88H53.63ZM61.32,27.29H71.18V12.56H64.17L63.8,16.39C63.59,18.93 63.31,21.1 62.97,22.9C62.63,24.71 62.08,26.17 61.32,27.29Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M95.07,32.4C92.67,32.4 90.6,31.9 88.86,30.91C87.12,29.9 85.79,28.48 84.86,26.64C83.92,24.79 83.45,22.62 83.45,20.12C83.45,17.65 83.92,15.5 84.86,13.64C85.8,11.77 87.12,10.31 88.81,9.28C90.5,8.23 92.49,7.7 94.78,7.7C96.25,7.7 97.64,7.94 98.95,8.42C100.27,8.89 101.43,9.61 102.44,10.6C103.46,11.59 104.26,12.84 104.84,14.37C105.42,15.88 105.71,17.69 105.71,19.79V21.52H86.1V17.72H100.31C100.29,16.64 100.06,15.68 99.6,14.84C99.15,13.98 98.51,13.31 97.69,12.83C96.88,12.34 95.93,12.09 94.85,12.09C93.7,12.09 92.69,12.38 91.82,12.94C90.95,13.49 90.27,14.21 89.78,15.12C89.3,16.01 89.06,16.99 89.05,18.06V21.38C89.05,22.77 89.3,23.96 89.81,24.96C90.32,25.95 91.03,26.7 91.94,27.23C92.86,27.75 93.93,28.01 95.15,28.01C95.97,28.01 96.71,27.9 97.38,27.67C98.04,27.43 98.62,27.08 99.11,26.63C99.59,26.17 99.96,25.6 100.21,24.93L105.48,25.52C105.14,26.91 104.51,28.13 103.58,29.16C102.65,30.19 101.47,30.99 100.03,31.56C98.58,32.12 96.93,32.4 95.07,32.4Z"
+        android:fillColor="#ffffff"
+        tools:ignore="VectorPath" />
+    <path
+        android:pathData="M110.48,40.91V8.01H116.02V11.97H116.35C116.64,11.39 117.05,10.77 117.58,10.12C118.11,9.45 118.83,8.89 119.73,8.42C120.63,7.94 121.79,7.7 123.19,7.7C125.04,7.7 126.7,8.18 128.19,9.12C129.68,10.05 130.87,11.44 131.74,13.28C132.62,15.11 133.06,17.35 133.06,20.01C133.06,22.63 132.63,24.87 131.77,26.7C130.91,28.54 129.73,29.94 128.25,30.91C126.76,31.87 125.08,32.36 123.2,32.36C121.83,32.36 120.69,32.13 119.79,31.67C118.89,31.21 118.16,30.66 117.61,30.02C117.07,29.37 116.65,28.75 116.35,28.17H116.12V40.91H110.48ZM116.01,19.98C116.01,21.52 116.23,22.88 116.66,24.04C117.11,25.2 117.75,26.11 118.58,26.77C119.42,27.41 120.44,27.73 121.63,27.73C122.88,27.73 123.92,27.4 124.76,26.73C125.6,26.06 126.23,25.14 126.66,23.98C127.1,22.8 127.31,21.47 127.31,19.98C127.31,18.49 127.1,17.17 126.68,16.02C126.25,14.87 125.62,13.96 124.78,13.31C123.93,12.66 122.89,12.33 121.63,12.33C120.43,12.33 119.4,12.65 118.56,13.28C117.72,13.91 117.08,14.8 116.65,15.94C116.22,17.08 116.01,18.43 116.01,19.98Z"
+        android:fillColor="#ffffff"
+        tools:ignore="VectorPath" />
+
+    </group>
+
+
 </vector>
