--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:context=".MainActivity">
-
-    <ImageView
-        android:src="@drawable/ic_launcher_foreground"
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:scaleX="0.5"
-        android:scaleY="0.5"
+        android:layout_height="wrap_content"
+        android:hint="@string/input_name_teg_email"
+        android:drawableLeft="@drawable/ic_baseline_search_24"
+        android:shadowColor="@color/purple_700"
+        app:circularflow_defaultRadius="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_design"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        android:padding="5dp"
 
         />
+
+
+
+
+
 
 
 
