--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+
+    >
     <EditText
+        android:id="@+id/inputSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/input_name_teg_email"
@@ -24,6 +27,28 @@
         android:padding="5dp"
 
         />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_category"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+
+
+
+        app:layout_constraintTop_toBottomOf="@id/inputSearch"
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        />
+
+
+
+
+
+
+
+
+
 
 
 
