--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,17 +28,26 @@
 
         />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_category"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/sliding_tabs"
         android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="10dp"
-
-
-
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/inputSearch"
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        app:tabMode="fixed"
+        />
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        app:layout_constraintTop_toBottomOf="@id/sliding_tabs"
+        app:layout_constraintStart_toStartOf="@id/sliding_tabs"
+        app:layout_constraintEnd_toEndOf="@id/sliding_tabs"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:background="@android:color/white"
         />
 
 
