--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,26 +28,42 @@
 
         />
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/sliding_tabs"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id = "@+id/appbar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         app:layout_constraintTop_toBottomOf="@id/inputSearch"
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintEnd_toEndOf="@id/inputSearch"
-        app:tabMode="fixed"
         />
+    <androidx.appcompat.widget.Toolbar
+        android:id = "@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/inputSearch"
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        app:layout_scrollFlags = "scroll|enterAlways"
+        app:popupTheme = "@style/AppTheme.PopupOverlay"
 
+        />
+    <com.google.android.material.tabs.TabLayout
+        android:id = "@+id/tab_tablayout"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/inputSearch"
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        />
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager"
-        app:layout_constraintTop_toBottomOf="@id/sliding_tabs"
-        app:layout_constraintStart_toStartOf="@id/sliding_tabs"
-        app:layout_constraintEnd_toEndOf="@id/sliding_tabs"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id = "@+id/tab_viewpager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        app:layout_constraintStart_toStartOf="@id/appbar"
+        app:layout_constraintEnd_toEndOf="@id/appbar"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-        android:background="@android:color/white"
         />
 
 
