--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity"
 
     >
+
     <EditText
         android:id="@+id/inputSearch"
         android:layout_width="match_parent"
@@ -27,7 +28,6 @@
         android:padding="5dp"
 
         />
-
 
 
     <com.google.android.material.tabs.TabLayout
@@ -55,13 +55,32 @@
 
     <ProgressBar
         style="?android:attr/progressBarStyle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/progress_bar"
         app:layout_constraintTop_toBottomOf="@id/tabCategory"
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintEnd_toEndOf="@id/inputSearch"
- />
+        tools:layout_editor_absoluteX="150dp"
+        android:outlineAmbientShadowColor="@color/grey"
+        tools:layout_editor_absoluteY="150dp" />
+
+    <FrameLayout
+        android:id="@+id/err_window"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="150dp">
+
+        <include
+            android:id="@+id/container_header_lyt"
+            layout="@layout/error_window"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
