--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,19 +51,23 @@
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintTop_toBottomOf="@id/progress_bar">
 
+        <include layout="@layout/list_empty_user" />
+
     </FrameLayout>
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+
         android:id="@+id/progress_bar"
-        app:layout_constraintTop_toBottomOf="@id/tabCategory"
-        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        android:indeterminate="true"
+        app:indicatorColor="@color/black"
+        app:indicatorSize="25dp"
+        app:trackThickness="3dp"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
         app:layout_constraintEnd_toEndOf="@id/inputSearch"
-        tools:layout_editor_absoluteX="150dp"
-        android:outlineAmbientShadowColor="@color/grey"
-        tools:layout_editor_absoluteY="150dp" />
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintTop_toBottomOf="@id/tabCategory"
+        />
 
     <FrameLayout
         android:id="@+id/err_window"
