--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
+        android:background="@color/white"
 
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="150dp">
@@ -87,6 +88,13 @@
             android:layout_height="match_parent" />
 
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/details_employee"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
