--- a/app/src/main/res/layout/fragment_details_employee.xml
+++ b/app/src/main/res/layout/fragment_details_employee.xml
@@ -132,6 +132,7 @@
         app:layout_constraintStart_toStartOf="parent"
         />
     <TextView
+        android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
