--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,100 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:layout_height="match_parent">
 
-    >
 
-    <EditText
-        android:id="@+id/inputSearch"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/input_name_teg_email"
-        android:drawableStart="@drawable/ic_baseline_search_24"
-
-        android:drawableEnd="@drawable/ic_sort_user"
-        android:shadowColor="@color/purple_700"
-        app:circularflow_defaultRadius="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/edit_text_design"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp"
-        android:padding="5dp"
-
-        />
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabCategory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/inputSearch"
-        app:layout_constraintTop_toBottomOf="@+id/inputSearch"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scrollbars="horizontal"
-        app:tabMode="auto"
-        app:flow_horizontalAlign="start"
-        />
-
-    <FrameLayout
-        android:id="@+id/placeHolderListUsers"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/inputSearch"
-        app:layout_constraintStart_toStartOf="@id/inputSearch"
-        app:layout_constraintTop_toBottomOf="@id/progress_bar">
-
-        <include layout="@layout/list_empty_user" />
-
-    </FrameLayout>
-
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-
-        android:id="@+id/progress_bar"
-        android:indeterminate="true"
-        app:indicatorColor="@color/black"
-        app:indicatorSize="25dp"
-        app:trackThickness="3dp"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        app:layout_constraintEnd_toEndOf="@id/inputSearch"
-        app:layout_constraintStart_toStartOf="@id/inputSearch"
-        app:layout_constraintTop_toBottomOf="@id/tabCategory"
-        />
-
-    <FrameLayout
-        android:id="@+id/err_window"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@color/white"
-
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="150dp">
-
-        <include
-            android:id="@+id/container_header_lyt"
-            layout="@layout/error_window"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/details_employee"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        />
-
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
