--- a/app/src/main/res/layout/fragment_list_user.xml
+++ b/app/src/main/res/layout/fragment_list_user.xml
@@ -1,23 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListUserFragment"
+
     >
+
+    <EditText
+        android:id="@+id/inputSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/input_name_teg_email"
+        android:drawableStart="@drawable/ic_baseline_search_24"
+
+        android:drawableEnd="@drawable/ic_sort_user"
+        android:shadowColor="@color/purple_700"
+        app:circularflow_defaultRadius="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/edit_text_design"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
+        android:padding="5dp"
+        />
+
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/inputSearch"
+        app:layout_constraintTop_toBottomOf="@+id/inputSearch"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scrollbars="horizontal"
+        app:tabMode="auto"
+        app:flow_horizontalAlign="start"
+        />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintTop_toBottomOf="@id/progress_bar">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleListUser"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleListUser"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
 
-</FrameLayout>
+        android:id="@+id/progress_bar"
+        android:indeterminate="true"
+        app:indicatorColor="@color/black"
+        app:indicatorSize="25dp"
+        app:trackThickness="3dp"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        app:layout_constraintEnd_toEndOf="@id/inputSearch"
+        app:layout_constraintStart_toStartOf="@id/inputSearch"
+        app:layout_constraintTop_toBottomOf="@id/tabCategory"
+        />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
