--- a/app/src/main/res/layout/fragment_list_user.xml
+++ b/app/src/main/res/layout/fragment_list_user.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,34 +13,49 @@
         android:id="@+id/inputSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/input_name_teg_email"
-        android:drawableStart="@drawable/ic_baseline_search_24"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
 
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/edit_text_design"
+        android:drawableStart="@drawable/ic_baseline_search_24"
         android:drawableEnd="@drawable/ic_sort_user"
+        android:hint="@string/input_name_teg_email"
+        android:padding="5dp"
         android:shadowColor="@color/purple_700"
         app:circularflow_defaultRadius="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/edit_text_design"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp"
-        android:padding="5dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabCategory"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:scrollbars="horizontal"
+        app:flow_horizontalAlign="start"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/inputSearch"
         app:layout_constraintTop_toBottomOf="@+id/inputSearch"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scrollbars="horizontal"
-        app:tabMode="auto"
-        app:flow_horizontalAlign="start"
-        />
+        app:tabMode="auto" />
+
+    <FrameLayout
+        android:id="@+id/emptySearchHolder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/swipeRefresh"
+        app:layout_constraintEnd_toEndOf="@id/swipeRefresh"
+        app:layout_constraintStart_toStartOf="@id/swipeRefresh"
+        app:layout_constraintTop_toTopOf="@id/swipeRefresh"
+        android:visibility="gone"
+        tools:visibility="visible"
+        >
+
+        <include layout="@layout/empty_search" />
+
+    </FrameLayout>
+
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
@@ -52,27 +66,30 @@
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintTop_toBottomOf="@id/progress_bar">
 
+
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleListUser"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
 
         android:id="@+id/progress_bar"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
         android:indeterminate="true"
         app:indicatorColor="@color/black"
         app:indicatorSize="25dp"
-        app:trackThickness="3dp"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
         app:layout_constraintEnd_toEndOf="@id/inputSearch"
         app:layout_constraintStart_toStartOf="@id/inputSearch"
         app:layout_constraintTop_toBottomOf="@id/tabCategory"
-        />
-
+        app:trackThickness="3dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
