--- a/app/src/main/res/layout/fragment_details_employee.xml
+++ b/app/src/main/res/layout/fragment_details_employee.xml
@@ -4,7 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".DetailsEmployeeFragment">
+    tools:context=".DetailsEmployeeFragment"
+    android:backgroundTint="@color/white"
+    android:background="@color/white"
+    android:clickable="true"
+    >
 
 
     <ImageView
